--- a/nbs/1. Why are we here.ipynb
+++ b/nbs/1. Why are we here.ipynb
@@ -141,9 +141,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": true,
     "hidden": true
    },
    "outputs": [],
@@ -153,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {
     "hidden": true
    },
@@ -161,19 +160,23 @@
     {
      "data": {
       "text/plain": [
-       "array([[ 0.765 ],\n",
-       "       [ 0.1525],\n",
-       "       [ 0.0645],\n",
-       "       [ 0.018 ]])"
+       "array([[0.765 ],\n",
+       "       [0.1515],\n",
+       "       [0.0645],\n",
+       "       [0.018 ]])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Exercise: Use Numpy to compute the answer to the above\n"
+    "#Exercise: Use Numpy to compute the answer to the above\n",
+    "a = np.array([[.9, .07, .02, .01],[0, .92, .05, .02],[0, 0 ,.85, .15],[0, 0 , 0, 1]])\n",
+    "x = np.array([[.85, .10, .05, 0]])\n",
+    "\n",
+    "a.T @ x.T"
    ]
   },
   {
@@ -1063,7 +1066,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
